WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286468
[LBSE][GTK][WPE] Composited SVG shapes are blurry when an ancestor is upscaled
https://bugs.webkit.org/show_bug.cgi?id=286468
Summary
[LBSE][GTK][WPE] Composited SVG shapes are blurry when an ancestor is upscaled
Vitaly Dyackhov
Reported
2025-01-24 04:41:32 PST
When one of the ancestors of a composited SVG shape is upscaled, it becomes blurry. It has already been fixed for Mac (
https://bugs.webkit.org/show_bug.cgi?id=275400
) but is still reproducible on WPE and GTK ports.
Attachments
Add attachment
proposed patch, testcase, etc.
Vitaly Dyackhov
Comment 1
2025-01-24 04:44:37 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39495
EWS
Comment 2
2025-01-31 10:35:45 PST
Committed
289615@main
(3d57fb9908db): <
https://commits.webkit.org/289615@main
> Reviewed commits have been landed. Closing PR #39495 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug