[LBSE][GTK][WPE] Composited SVG shapes are blurry when an ancestor is upscaled https://bugs.webkit.org/show_bug.cgi?id=286468

Reviewed by Nikolas Zimmermann.

`GraphicsLayerCoordinated` should calculate and use the root relative scale,
similiarly to what `GraphicsLayerCA` already does.

This patch makes all `svg/compositing` tests pass on GTK and WPE
after slightly updating fuzziness for some of them.

* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/svg/compositing/outermost-svg-directly-composited-group-child.html:
* LayoutTests/svg/compositing/outermost-svg-directly-composited-shape-child.html:
* LayoutTests/svg/compositing/outermost-svg-directly-composited-transformed-group-child.html:
* LayoutTests/svg/compositing/outermost-svg-with-border-overflow-visible.html:
* LayoutTests/svg/compositing/outermost-svg-with-border-padding-margin.html:
* LayoutTests/svg/compositing/outermost-svg-with-border-padding.html:
* LayoutTests/svg/compositing/outermost-svg-with-border.html:
* LayoutTests/svg/compositing/svg-poster-circle.html:
* Source/WebCore/platform/graphics/texmap/coordinated/GraphicsLayerCoordinated.cpp:
(WebCore::GraphicsLayerCoordinated::updateRootRelativeScale):
(WebCore::GraphicsLayerCoordinated::commitLayerChanges):
* Source/WebCore/platform/graphics/texmap/coordinated/GraphicsLayerCoordinated.h:

Canonical link: https://commits.webkit.org/289615@main